--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       This should be the same across all pages.
      -->
     <link rel="icon" href="./assets/images/home_page_icon.png" />
-		<title>Unemployables Portfolio</title>
+		<title>IceCreamMan Portfolio</title>
     <meta name="description" content="A portfolio template for the Unemployables community.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -31,7 +31,7 @@
         <!-- TODO - Change the "Portfolio Title" to whatever you want displayed in the top left -->
         <span class="nav-title">Portfolio Title</span>
          <!-- TODO - Change the email after 'mailto:' to your email address for contact -->
-        <a class="button" href="mailto:whitevans.eth@gmail.com">
+        <a class="button" href="mailto:cddc12346@gmail.com">
           <span class="button-text">Contact Me</span>
         </a>
       </a>
@@ -51,9 +51,6 @@
             - If you aren't using an Unemployable as your image, remove the entire "a" element
           -->
           <img src="./assets/images/home_page_icon.png" class="portfolio-header-image">
-          <a class="no-underline" target="_blank" href="https://opensea.io/assets/0xe0be388ab81c47b0f098d2030a1c9ef190691a8a/1311">
-            <span class="image-caption">Unemployables #1311</span>
-          </a>
         </div>
 
           <!-- 
