--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div id="portfolio-header-text-container">
             <div class="header-text">
               <span class="main-title">Hey, I'm IceCreamMan.</span>
-              <div class="body-text">I’m a cyber security researcher.</div>
+              <div class="body-text">I’m a cyber security research.</div>
             </div>
             <a class="button" id="my-work-link">
               <span class="button-text">Check out my projects</span> 
@@ -115,6 +115,17 @@
                 - SMALL_PROJECT_DESCRIPTION: a quick project description (max 4 lines)
                 - PROJECT_PAGE_NAME.html: the html filename for the project (must be in project-pages folder)
           -->
+          <div class="project-card">
+            <img src="./assets/images/home_page_icon.png" class="project-image">
+            <div class="project-card-text-container">
+              <div class="subheader-text project-title">Pikachu Project</div>
+              <div class="body-text project-card-text">Being a Pikachu</div>
+            </div>
+            <a class="button" href="./project-pages/project-template.html">
+              <span class="button-text">Read More</span>
+              <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
+            </a>
+          </div>
           <div class="project-card">
             <img src="./assets/images/desktop.jpeg" class="project-image">
             <div class="project-card-text-container">
