--- a/project-pages/project-template.html
+++ b/project-pages/project-template.html
@@ -25,7 +25,7 @@
       This should be the same across all pages.
      -->
      <link rel="icon" href="../assets/images/home_page_icon.png" />
-     <title>Unemployables Portfolio</title>
+     <title>IceCreamMan's Portfolio</title>
     <meta name="description" content="A portfolio template for the Unemployables community.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
