--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div id="portfolio-header-text-container">
             <div class="header-text">
               <span class="main-title">Hey, I'm IceCreamMan.</span>
-              <div class="body-text">I’m a cyber security research.</div>
+              <div class="body-text">I’m a cyber security researcher.</div>
             </div>
             <a class="button" id="my-work-link">
               <span class="button-text">Check out my projects</span> 
