--- a/project-pages/project-1.html
+++ b/project-pages/project-1.html
@@ -69,9 +69,8 @@
             - Change "desktop.jpeg" to the image filename you uploaded in the assets/images folder.
           -->
         <div class="main-title">"Playing" game</div>
-        <div class="body-text">Managed to enable map hack :)</div>
+        <div class="body-text">Managed to enable map hack on mobile legend. After enabling map hack, one will be able to see all his enemies on the mini map on the top left </div>
         <image class="project-header-image" src="../assets/images/mobile_legend.png">
-      </div>
 
       <!-- PROJECT DETAILS -->
       <!-- 
@@ -83,54 +82,23 @@
       <div id="project-details">
         <div class="subheader-text">Project Details / Background</div>
         <div class="project-details-content">
-          <div class="body-text">Unfortunately, I am not going to publish how I do it here.</div>
-          <div class="body-text">If interested, you can contact me on twitter.</div>
-          <div class="body-text">Anyway, these are the tools and skills involved: </div>
-          <ol>
-            <li>Android</li>
-            <li>Frida: Hooking/Interception</li>
-            <li>Reverse Engineering of Java/Native code</li>
-            <li>IDA / Jd-GUI</li>
-            <li>Byte patching</li>
-          </ol>
-        </div>
-      </div>
-
-      <!-- IMAGE GALLERY -->
-      <div id="project-gallery">
-        <!-- TODO - Change the 'subheader-text' to whatever you want the Gallery section header to say -->
-        <div class="subheader-text">Image Gallery</div>
-        <div class="project-gallery-content">
-            <!-- 
-              TODO
-
-              This is where the images in the gallery live. Here's a simple gallery image for you to copy:
-
-              Full Width Image:
-
-                <div class="gallery-image-container">
-                  <img src="../assets/images/IMAGE_NAME" class="gallery-image">
-                  <span class="image-caption">IMAGE_CAPTION</span>
-                </div>
-
-              Half Width Image: 
-
-                <div class="gallery-image-container half-width">
-                  <img src="../assets/images/IMAGE_NAME" class="gallery-image">
-                  <span class="image-caption">IMAGE_CAPTION</span>
-                </div>
-
-              - To add an image to the this area, copy one of the above, paste it below this comment, and change the following:
-                  - IMAGE_NAME: the name of the image file in assets/images
-                  - IMAGE_CAPTION: to the caption of the image
-            -->
+          <div class="body-text">Unfortunately, I am not going to publish how its done here. If interested, you can contact me on Twitter.<br><br>
+            Anyway, these are the tools and skills involved:
+            <ol>
+              <li>Android</li>
+              <li>Frida: Hooking/Interception</li>
+              <li>Reverse Engineering of Java/Native code</li>
+              <li>IDA / Jd-GUI</li>
+              <li>Byte patching</li>
+            </ol>
             <div class="gallery-image-container">
               <video width="848" height="464" controls>
                 <source src="../assets/images/IMG_1699.MOV" type="video/mp4">
                 <span class="image-caption">Map hack. Look at the top left, I can see all my enemies now!!</span>
                 Your browser does not support the video tag.
               </video>
-            </div>            
+            </div>   
+          </div>
         </div>
       </div>
     </div>
