--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div id="portfolio-header-text-container">
             <div class="header-text">
               <span class="main-title">Hey, I'm IceCreamMan.</span>
-              <div class="body-text">I’m a cyber security researcher.</div>
+              <div class="body-text">I'm a cyber security researcher. Plays CTF with ProjectSekai.</div>
             </div>
             <a class="button" id="my-work-link">
               <span class="button-text">Check out my projects</span> 
@@ -82,8 +82,14 @@
       <div id="about-section">
         <span class="subheader-text">My Background / About Me</span>
         <div class="about-section-content">
-          <div class="body-text">Curious about random stuff</div>
-          <div class="body-text">Recent interest: OS, games, hardware</div>
+          <div class="body-text">Tinkering with random stuff<br>
+            My recent interests include:
+            <ol>
+              <li>OS Internals</li>
+              <li>Games</li>
+              <li>Hardware</li>
+            </ol>
+          </div>
         </div>
       </div>
 
