--- a/index.html
+++ b/index.html
@@ -92,20 +92,21 @@
           </div>          
         </div>
         <br>
-        <span class="subheader-text">My Projects</span>
-        <div class="projects-container">
-        
-        <div class="project-card">
-          <img src="./assets/images/project-1.png" class="project-image">
-          <div class="project-card-text-container">
-            <div class="subheader-text project-title">Game hacking</div>
-            <div class="body-text project-card-text">Reverse engineering</div>
+        <div id="my-work-section">
+          <span class="subheader-text">My Projects</span>
+          <div class="projects-container">          
+            <div class="project-card">
+              <img src="./assets/images/project-1.png" class="project-image">
+              <div class="project-card-text-container">
+                <div class="subheader-text project-title">Game hacking</div>
+                <div class="body-text project-card-text">Reverse engineering</div>
+              </div>
+              <a class="button" href="./project-pages/project-1">
+                <span class="button-text">Read More</span>
+                <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
+              </a>
+            </div>
           </div>
-          <a class="button" href="./project-pages/project-1">
-            <span class="button-text">Read More</span>
-            <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
-          </a>
-        </div>
         </div>
       </div>      
 
