--- a/project-pages/project-1.html
+++ b/project-pages/project-1.html
@@ -116,7 +116,7 @@
         This should be the same across all pages.
       -->
       <a class="icon-link" target="_blank" href="https://twitter.com/IceCreamMan3333">
-        <image src="./assets/icons/twitter.svg" class="footer-icon"/>
+        <image src="../assets/icons/twitter.svg" class="footer-icon"/>
       </a>
       <!-- 
         TODO - Change the email after "mailto" to your contact email 
@@ -124,7 +124,7 @@
         This should be the same across all pages.
       -->
       <a class="icon-link" href="mailto:cddc12346@gmail.com">
-        <image src="./assets/icons/mail.svg" class="footer-icon"/>
+        <image src="../assets/icons/mail.svg" class="footer-icon"/>
       </a>
     </div>
 
