--- a/project-pages/project-2.html
+++ b/project-pages/project-2.html
@@ -14,7 +14,6 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-
     <!-- 
       TODO
 
@@ -69,9 +68,10 @@
             - Change the 'body-text' text to a short and sweet description of your project (maybe the same as the one on the project card)
             - Change "desktop.jpeg" to the image filename you uploaded in the assets/images folder.
           -->
-        <div class="main-title">"Playing" game</div>
-        <div class="body-text">Managed to enable map hack on mobile legend. After enabling map hack, one will be able to see all his enemies on the mini map on the top left </div>
-        <image class="project-header-image" src="../assets/images/mobile_legend.png">
+        <div class="main-title">HackTheBox CTF 2023</div>
+        <div class="body-text">Solve some of the pwn challenges.</div>
+        <image class="project-header-image" src="../assets/images/desktop.jpeg">
+      </div>
 
       <!-- PROJECT DETAILS -->
       <!-- 
@@ -81,25 +81,53 @@
         - Add paragraphs using the <div class="body-text"></div> elements in the "project-details-content"
       -->
       <div id="project-details">
-        <div class="subheader-text">Project Details / Background</div>
+        <div class="subheader-text">The bug</div>
         <div class="project-details-content">
-          <div class="body-text">Unfortunately, I am not going to publish how its done here. If interested, you can contact me on Twitter.<br><br>
-            Anyway, these are the tools and skills involved:
-            <ol>
-              <li>Android</li>
-              <li>Frida: Hooking/Interception</li>
-              <li>Reverse Engineering of Java/Native code</li>
-              <li>IDA / Jd-GUI</li>
-              <li>Byte patching</li>
-            </ol>
+          <div class="body-text">The bug pattern is pretty interesting.</div>
+          <div class="body-text">Vitae justo eget magna fermentum. Imperdiet nulla malesuada pellentesque elit eget gravida. Aliquet nec ullamcorper sit amet. Aliquet sagittis id consectetur purus. Ac tortor dignissim convallis aenean. Enim neque volutpat ac tincidunt vitae. Lobortis feugiat vivamus at augue. Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Viverra orci sagittis eu volutpat. Massa tincidunt nunc pulvinar sapien et ligula. Donec enim diam vulputate ut.</div>
+        </div>
+      </div>
+
+      <!-- IMAGE GALLERY -->
+      <div id="project-gallery">
+        <!-- TODO - Change the 'subheader-text' to whatever you want the Gallery section header to say -->
+        <div class="subheader-text">Image Gallery</div>
+        <div class="project-gallery-content">
+            <!-- 
+              TODO
+
+              This is where the images in the gallery live. Here's a simple gallery image for you to copy:
+
+              Full Width Image:
+
+                <div class="gallery-image-container">
+                  <img src="../assets/images/IMAGE_NAME" class="gallery-image">
+                  <span class="image-caption">IMAGE_CAPTION</span>
+                </div>
+
+              Half Width Image: 
+
+                <div class="gallery-image-container half-width">
+                  <img src="../assets/images/IMAGE_NAME" class="gallery-image">
+                  <span class="image-caption">IMAGE_CAPTION</span>
+                </div>
+
+              - To add an image to the this area, copy one of the above, paste it below this comment, and change the following:
+                  - IMAGE_NAME: the name of the image file in assets/images
+                  - IMAGE_CAPTION: to the caption of the image
+            -->
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/code.jpeg" class="gallery-image">
+              <span class="image-caption">Give your image a caption. People love context.</span>
+            </div>
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/sketchbook.jpeg" class="gallery-image">
+              <span class="image-caption">Give your image a caption. People love context.</span>
+            </div>
             <div class="gallery-image-container">
-              <video width="848" height="464" controls>
-                <source src="../assets/images/IMG_1699.MOV" type="video/mp4">
-                <span class="image-caption">Map hack. Look at the top left, I can see all my enemies now!!</span>
-                Your browser does not support the video tag.
-              </video>
-            </div>   
-          </div>
+              <img src="../assets/images/camera.jpeg" class="gallery-image">
+              <span class="image-caption">Give your image a caption. People love context.</span>
+            </div>
         </div>
       </div>
     </div>
@@ -111,12 +139,15 @@
 
         This should be the same across all pages.
       -->
+      <a class="icon-link" target="_blank" href="https://twitter.com/whitevans_eth">
+        <image src="../assets/icons/instagram.svg" class="footer-icon"/>
+      </a>
       <!-- 
         TODO - Change href to your Twitter account (can also delete entire "a" element if no Twitter) 
       
         This should be the same across all pages.
       -->
-      <a class="icon-link" target="_blank" href="https://twitter.com/IceCreamMan3333">
+      <a class="icon-link" target="_blank" href="https://twitter.com/whitevans_eth">
         <image src="../assets/icons/twitter.svg" class="footer-icon"/>
       </a>
       <!-- 
@@ -124,7 +155,7 @@
       
         This should be the same across all pages.
       -->
-      <a class="icon-link" href="mailto:cddc12346@gmail.com">
+      <a class="icon-link" href="mailto:whitevans.eth@gmail.com">
         <image src="../assets/icons/mail.svg" class="footer-icon"/>
       </a>
     </div>
