--- a/js/test_widget/hello-widget-online.html
+++ b/js/test_widget/hello-widget-online.html
@@ -11,7 +11,7 @@
 </div>
 
 <!-- probably just need this line -->
-<div class='sk-ww-google-reviews' data-embed-id='25375120'></div><script src='https://cddc12346.github.io/js/test_widget/widget.js' async defer></script>
-
+<!-- <div class='sk-ww-google-reviews' data-embed-id='25375120'></div><script src='https://cddc12346.github.io/js/test_widget/widget.js' async defer></script> -->
+<div class='sk-ww-google-reviews' data-embed-id='25375120'></div><script src='widget.js' async defer></script>
 </body>
 </html>
