--- a/js/test_widget/hello-widget-online.html
+++ b/js/test_widget/hello-widget-online.html
@@ -10,8 +10,7 @@
   <p>This example contains some advanced CSS methods you may not have learned yet. But, we will explain these methods in a later chapter in the tutorial.</p>
 </div>
 
-<!-- probably just need this line -->
-<!-- <div class='sk-ww-google-reviews' data-embed-id='25375120'></div><script src='https://cddc12346.github.io/js/test_widget/widget.js' async defer></script> -->
-<div class='sk-ww-google-reviews' data-embed-id='25375120'></div><script src='widget.js' async defer></script>
+<div class='sk-ww-google-reviews' data-embed-id='25375120'></div><script src='https://cddc12346.github.io/js/test_widget/widget.js' async defer></script>
+<!-- <div class='sk-ww-google-reviews' data-embed-id='25375120'></div><script src='widget.js' async defer></script> -->
 </body>
 </html>
