--- a/js/widget_2/hello-widget-test.html
+++ b/js/widget_2/hello-widget-test.html
@@ -10,8 +10,8 @@
   <p>This example contains some advanced CSS methods you may not have learned yet. But, we will explain these methods in a later chapter in the tutorial.</p>
 </div>
 
-<script src="platform.js" data-use-service-core defer></script>
-<!-- <script src="https://cddc12346.github.io/js/widget_2/platform.js" data-use-service-core defer></script> -->
+<!-- <script src="platform.js" data-use-service-core defer></script> -->
+<script src="https://cddc12346.github.io/js/widget_2/platform.js" data-use-service-core defer></script>
 <div class="elfsight-app-8e3fff59-a3be-456d-8e0a-e65f07ae074f" data-elfsight-app-lazy></div>
 
 </body>
